[309]: Some cleanup from Sonar recommendations